--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,11 +26,11 @@ dist.jar=${dist.dir}/JavaAPP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlitejdbc-v056.jar=sqlitejdbc-v056.jar
+file.reference.sqlitejdbc-v056.jar-1=C:\\Users\\hamid\\Documents\\NetBeansProjects\\sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlitejdbc-v056.jar}
+    ${file.reference.sqlitejdbc-v056.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
